--- a/index.html
+++ b/index.html
@@ -13,11 +13,15 @@
 
 <body class="bg-dark text-white overflow-hidden font-sans">
 
-<div id="app" v-cloak class="flex flex-col h-screen">
-    <nav-bar v-model:proxy="useProxy"></nav-bar>
+<div id="app" v-cloak class="flex flex-col h-screen overflow-hidden">
+    <nav-bar
+            v-model:proxy="useProxy"
+            @open-menu="$refs.sidebar.isOpen = true">
+    </nav-bar>
 
     <div class="flex flex-1 overflow-hidden relative">
         <side-bar
+                ref="sidebar"
                 :categories="categories"
                 :groups="dynamicTagGroups"
                 :selected="selectedTags"
@@ -25,7 +29,7 @@
                 @reset="resetFilters">
         </side-bar>
 
-        <main class="flex-1 p-6 overflow-y-auto bg-dark">
+        <main class="flex-1 p-6 overflow-y-auto bg-dark custom-scrollbar" id="main-content">
             <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4 gap-6 content-start">
 
                 <a href="upload/upload.html"
@@ -35,32 +39,56 @@
                     </div>
                     <div class="text-center">
                         <h3 class="text-lg font-bold text-white tracking-tight">贡献你的机器</h3>
-                        <p class="text-xs text-gray-500 mt-2 leading-relaxed">
-                            欢迎分享你的红石科技<br>点击前往自动化投递系统
-                        </p>
-                    </div>
-                    <div class="mt-6 px-5 py-2 rounded-full bg-brand/10 border border-brand/20 text-brand text-[10px] font-bold uppercase tracking-widest group-hover:bg-brand group-hover:text-white transition-all">
-                        立即投递
+                        <p class="text-xs text-gray-500 mt-2 leading-relaxed">欢迎分享你的红石科技<br>点击前往投递系统</p>
                     </div>
                 </a>
 
                 <archive-card
-                        v-for="item in filteredList"
+                        v-for="item in pagedList"
                         :key="item.id"
                         :item="item"
                         @open="detailItem = $event">
                 </archive-card>
             </div>
+
+            <div v-if="totalPages > 1" class="mt-16 mb-24 flex flex-col items-center gap-4">
+                <div class="flex items-center gap-3">
+                    <button @click="setPage(currentPage - 1)"
+                            :disabled="currentPage === 1"
+                            class="w-10 h-10 flex items-center justify-center rounded-xl bg-white/5 border border-white/10 text-gray-400 hover:bg-brand hover:text-white disabled:opacity-10 transition-all">
+                        <svg class="w-4 h-4" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path d="M15 19l-7-7 7-7" stroke-width="3"/></svg>
+                    </button>
+
+                    <div class="flex items-center gap-2 px-3 py-1.5 bg-white/5 border border-white/10 rounded-xl focus-within:border-brand/50 transition-all">
+                        <input type="number"
+                               :value="currentPage"
+                               @keyup.enter="setPage($event.target.value)"
+                               @blur="setPage($event.target.value)"
+                               class="w-10 bg-transparent text-center text-sm font-bold text-brand outline-none [appearance:textfield] [&::-webkit-outer-spin-button]:appearance-none [&::-webkit-inner-spin-button]:appearance-none">
+                        <span class="text-gray-600 text-xs">/</span>
+                        <span class="text-gray-400 text-sm font-medium pr-1">{{ totalPages }}</span>
+                    </div>
+
+                    <button @click="setPage(currentPage + 1)"
+                            :disabled="currentPage === totalPages"
+                            class="w-10 h-10 flex items-center justify-center rounded-xl bg-white/5 border border-white/10 text-gray-400 hover:bg-brand hover:text-white disabled:opacity-10 transition-all">
+                        <svg class="w-4 h-4" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path d="M9 5l7 7-7 7" stroke-width="3"/></svg>
+                    </button>
+                </div>
+
+                <div class="text-[9px] text-gray-700 tracking-[0.2em] uppercase">
+                    {{ fullFilteredList.length }} Archives Total
+                </div>
+            </div>
+
+            <div v-if="fullFilteredList.length === 0" class="py-20 text-center text-gray-500 italic text-sm">
+                没有找到符合条件的红石机械...
+            </div>
         </main>
     </div>
 
-    <detail-modal
-            v-if="detailItem"
-            :item="detailItem"
-            @close="detailItem = null">
-    </detail-modal>
+    <detail-modal v-if="detailItem" :item="detailItem" @close="detailItem = null"></detail-modal>
 </div>
-
 <script src="https://unpkg.com/vue@3/dist/vue.global.prod.js"></script>
 <script type="module" src="scripts/main.js"></script>
 </body>
