--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="zh-CN">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
     <title>OpenST Archive</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://lib.baomitu.com/marked/11.1.1/marked.min.js"></script>
