--- a/index.html
+++ b/index.html
@@ -87,6 +87,14 @@
             <div v-if="fullFilteredList.length === 0" class="py-20 text-center text-gray-500 italic text-sm">
                 没有找到符合条件的红石机械...
             </div>
+
+            <div v-if="totalPages > 1" class="mt-16 mb-32 flex flex-col items-center gap-4">
+                <div class="text-[9px] text-gray-700 tracking-[0.2em] uppercase">
+                    {{ fullFilteredList.length }} Archives Total
+                </div>
+            </div>
+
+            <div class="h-[env(safe-area-inset-bottom,2rem)] md:h-12 w-full block"></div>
         </main>
     </div>
 
