--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 @reset="resetFilters">
         </side-bar>
 
-        <main class="flex-1 p-6 overflow-y-auto bg-dark custom-scrollbar" id="main-content">
+        <main class="flex-1 p-6 pb-[20vh] overflow-y-auto bg-dark custom-scrollbar" id="main-content">
             <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4 gap-6 content-start">
 
                 <a href="upload/upload.html"
