--- a/index.html
+++ b/index.html
@@ -89,19 +89,16 @@
             </div>
 
             <div v-if="totalPages > 1" class="mt-16 mb-32 flex flex-col items-center gap-4">
-                <div class="text-[9px] text-gray-700 tracking-[0.2em] uppercase">
-                    {{ fullFilteredList.length }} Archives Total
-                </div>
             </div>
 
-            <div class="h-[env(safe-area-inset-bottom,2rem)] md:h-12 w-full block"></div>
+            <div v-if="totalPages > 1" class="mt-16 mb-24 flex flex-col items-center gap-4"></div>
         </main>
     </div>
 
     <detail-modal v-if="detailItem" :item="detailItem" @close="detailItem = null"></detail-modal>
 </div>
 <script src="https://unpkg.com/vue@3/dist/vue.global.prod.js"></script>
-<!-- <script src="scripts/mock.js"></script> -->
+<script src="scripts/mock.js"></script>
 <script type="module" src="scripts/main.js"></script>
 </body>
 </html>
