--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
     <detail-modal v-if="detailItem" :item="detailItem" @close="detailItem = null"></detail-modal>
 </div>
 <script src="https://unpkg.com/vue@3/dist/vue.global.prod.js"></script>
-<script src="scripts/mock.js"></script>
+<!-- <script src="scripts/mock.js"></script> -->
 <script type="module" src="scripts/main.js"></script>
 </body>
 </html>
