--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
+    <link rel="icon" href="images/favicon.png">
+    <link rel="apple-touch-icon" href="images/favicon.png">
     <title>OpenST Archive</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://lib.baomitu.com/marked/11.1.1/marked.min.js"></script>
