--- a/upload/upload.html
+++ b/upload/upload.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="images/favicon.png">
-    <link rel="apple-touch-icon" href="images/favicon.png">
+    <link rel="icon" href="../images/favicon.png">
+    <link rel="apple-touch-icon" href="../images/favicon.png">
     <title>投递新机器 - OpenST</title>
     <link rel="stylesheet" href="upload_style.css">
     <script src="https://unpkg.com/vue@3/dist/vue.global.prod.js"></script>
