--- a/auth-callback.html
+++ b/auth-callback.html
@@ -15,7 +15,7 @@
                         timestamp: new Date().getTime()
                     }));
                     // 3. 根据 state 完美回源
-                    window.location.href = state ? atob(state) : './index.html';
+                    window.location.href = state ? atob(state) : './archive.html';
                 }
             });
     }
